    (Karthik Kambatla via eli)

    HADOOP-9135. JniBasedUnixGroupsMappingWithFallback should log at debug
    rather than info during fallback. (Colin Patrick McCabe via todd)

    HADOOP-9152. HDFS can report negative DFS Used on clusters with very small
    amounts of data. (Brock Noland via atm)

    HADOOP-9153. Support createNonRecursive in ViewFileSystem.
    (Sandy Ryza via tomwhite)

    HADOOP-9181. Set daemon flag for HttpServer's QueuedThreadPool.
    (Liang Xie via suresh)

    HADOOP-9155. FsPermission should have different default value, 777 for
    directory and 666 for file. (Binglin Chang via atm)

    HADOOP-9183. Potential deadlock in ActiveStandbyElector. (tomwhite)

    HADOOP-9203. RPCCallBenchmark should find a random available port.
    (Andrew Purtell via suresh)

    HADOOP-9178. src/main/conf is missing hadoop-policy.xml.
    (Sandy Ryza via eli)

    HADOOP-8816. HTTP Error 413 full HEAD if using kerberos authentication. 
    (moritzmoeller via tucu)
    
    HADOOP-9212. Potential deadlock in FileSystem.Cache/IPC/UGI. (tomwhite)

    HADOOP-8589 ViewFs tests fail when tests and home dirs are nested.
    (sanjay Radia)

    HADOOP-9193. hadoop script can inadvertently expand wildcard arguments
    when delegating to hdfs script. (Andy Isaacson via todd)

    HADOOP-9215. when using cmake-2.6, libhadoop.so doesn't get created
    (only libhadoop.so.1.0.0) (Colin Patrick McCabe via todd)

    HADOOP-8857. hadoop.http.authentication.signature.secret.file docs 
    should not state that secret is randomly generated. (tucu)

    HADOOP-9190. packaging docs is broken. (Andy Isaacson via tgraves)

    HADOOP-9221. Convert remaining xdocs to APT. (Andy Isaacson via atm)

    HADOOP-8981. TestMetricsSystemImpl fails on Windows. (Xuan Gong via suresh)
    
    HADOOP-9124. SortedMapWritable violates contract of Map interface for
    equals() and hashCode(). (Surenkumar Nihalani via tomwhite)
